# nRF5-SDK-cmake-llvm

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  clang-arm-baremetal-toolchain.dockerfile  fix-builtin.patch  homebrew-arm-toolchain.dockerfile  nRF52-SDK-15.3-clang.dockerfile  nrf52-sdk-15.3-clang.dockerfile  nrfpatch.sh  nrfsvc.py  remove-register-keyword.patch  vmsr.patch
cmake/: arm-none-eabi-gcc.toolchain.cmake  empty.c  modules.cmake  nRF5-SDK.cmake  sources.cmake
sdk/: version.txt
sdk/components/libraries/twi_mngr/: nrf_twi_mngr.h
sdk/components/softdevice/s112/headers/: ble.h  ble_gap.h  nrf_sdm.h
sdk/components/softdevice/s132/headers/: ble_gap.h
sdk/components/softdevice/s140/headers/: ble_gap.h
sdk/components/toolchain/cmsis/include/: cmsis_armcc.h  cmsis_gcc.h
sdk/examples/peripheral/blinky/pca10056/blank/armgcc/: CMakeLists.txt  blinky_gcc_nrf52.ld
sdk/examples/peripheral/blinky/pca10056/mbr/armgcc/: CMakeLists.txt  blinky_gcc_nrf52.ld
sdk/examples/peripheral/rtc/pca10056/blank/armgcc/: CMakeLists.txt
sdk/examples/peripheral/timer/pca10056/blank/armgcc/: CMakeLists.txt
sdk/examples/peripheral/twi_master_using_nrf_twi_mngr/pca10056/blank/armgcc/: CMakeLists.txt  twi_master_using_nrf_twi_mngr_gcc_nrf52.ld
sdk/examples/peripheral/usbd/pca10056/blank/armgcc/: CMakeLists.txt  usbd_gcc_nrf52.ld
sdk/examples/peripheral/usbd_cdc_acm/pca10056/blank/armgcc/: CMakeLists.txt
sdk/examples/peripheral/usbd_msc/pca10056/blank/armgcc/: CMakeLists.txt
sdk/modules/nrfx/mdk/: compiler_abstraction.h  gcc_startup_nrf52810.S
tools/: Identify header dependencies.ipynb  download-sdk.sh  patch-sdk.sh
tools/assets/: remove-register-keyword.patch  stack_ptr.patch
tools/nrf5-llvm/: LICENSE  README.md  vmsr.patch
